Use shout-config if available.
I'll look into trying pkg-config if it's available and using shout-config as
a fallback, ok?

--- a/icecast/trunk/ices0/trunk/Makefile.am
+++ b/icecast/trunk/ices0/trunk/Makefile.am
@@ -2,7 +2,7 @@
 
 AUTOMAKE_OPTIONS = foreign
 
-SUBDIRS = @subdirs@ src conf doc
+SUBDIRS = src conf doc
 
 EXTRA_DIST = README FEATURES BUGS AUTHORS TODO INSTALL COPYING CHANGES FAQ TESTED README.playlist FILES
 
