--- a/icecast/trunk/ices0/trunk/src/playlist/Makefile.am
+++ b/icecast/trunk/ices0/trunk/src/playlist/Makefile.am
@@ -2,12 +2,7 @@
 
 AUTOMAKE_OPTIONS = foreign
 
-if NEED_SHOUT
-SHOUT_INCLUDES = -I$(top_srcdir)/libshout
-endif
-
-INCLUDES = -DICES_MODULEDIR=\"$(moddir)\" \
-	-I$(top_srcdir)/src $(SHOUT_INCLUDES)
+INCLUDES = -DICES_MODULEDIR=\"$(moddir)\" -I$(top_srcdir)/src
 
 noinst_LIBRARIES = libplaylist.a
 noinst_HEADERS = playlist.h pm_builtin.h rand.h
