Automake 1.6 appears to work again.

--- a/icecast/trunk/ices0/trunk/src/Makefile.am
+++ b/icecast/trunk/ices0/trunk/src/Makefile.am
@@ -17,5 +17,6 @@ EXTRA_ices_SOURCES = ices_config.c in_vorbis.c reencode.c
 
 BUILT_SOURCES = $(ICES_OBJECTS)
 
-ices_CPPFLAGS = -DICES_ETCDIR=\"$(sysconfdir)\" -DICES_MODULEDIR=\"$(moddir)\"
 ices_LDADD = $(ICES_OBJECTS) playlist/libplaylist.a
+
+AM_CPPFLAGS = -DICES_ETCDIR=\"$(sysconfdir)\" -DICES_MODULEDIR=\"$(moddir)\"
