Automake 1.6 appears to finally handle conditional code dependencies properly. Updated accordingly. And, yay!

--- a/icecast/trunk/ices0/trunk/configure.ac
+++ b/icecast/trunk/ices0/trunk/configure.ac
@@ -1,5 +1,5 @@
 # configure script for ices
-# $Id: configure.ac,v 1.3 2003/03/08 23:55:58 brendan Exp $
+# $Id: configure.ac,v 1.4 2003/03/13 20:32:55 brendan Exp $
 
 m4_define(ICES_MAJOR, 0)
 m4_define(ICES_MINOR, 2)
@@ -170,12 +170,12 @@ then
     AC_DEFINE(HAVE_LIBXML, 1, [Define if you have the GNOME XML library])
     LIBS="$LIBS `$XMLCONFIG --libs`"
     CPPFLAGS="$CPPFLAGS `$XMLCONFIG --cflags`"
-    ICES_OBJECTS="$ICES_OBJECTS ices_config.o"
     have_xml="yes"
   else
     AC_MSG_RESULT([Compiling without libxml support - no configfiles])
   fi
 fi
+AM_CONDITIONAL(USE_XML, test "$have_xml" = "yes")
 
 AC_ARG_WITH([python],
   [[  --with-python[=PATH]    include python scripting support]],
@@ -192,10 +192,10 @@ then
     CPPFLAGS="$CPPFLAGS $PYTHON_CPPFLAGS"
     LDFLAGS="$LDFLAGS $PYTHON_LDFLAGS"
     LIBS="$LIBS $PYTHON_LIBS"
-    PLAYLIST_OBJECTS="$PLAYLIST_OBJECTS pm_python.o"
     AC_DEFINE(HAVE_LIBPYTHON, 1, [Define if you have the python library])
   fi
 fi
+AM_CONDITIONAL(USE_PYTHON, test "$have_python" = "yes")
 
 if test "$with_python" != "no" -a "$have_python" != "yes"
 then
@@ -235,13 +235,13 @@ then
   if test "$ac_cv_func_perl_construct" != "no"
   then
     have_perl="yes"
-    PLAYLIST_OBJECTS="$PLAYLIST_OBJECTS pm_perl.o"
     AC_DEFINE(HAVE_LIBPERL, 1, [Define if you have perl libraries])
   else
     CPPFLAGS="$saved_CPPFLAGS"
     LIBS="$saved_LIBS"
   fi
 fi
+AM_CONDITIONAL(USE_PERL, test "$have_perl" = "yes")
 
 if test "$with_perl" != "no" -a "$have_perl" != "yes"
 then
@@ -277,12 +277,12 @@ then
     AC_CHECK_LIB(mp3lame, lame_encode_flush_nogap, [
       have_LAME="yes"
       LIBS="$LIBS -lmp3lame"
-      ICES_OBJECTS="$ICES_OBJECTS reencode.o"
       LIBM="-lm"
       AC_DEFINE(HAVE_LIBLAME, 1, [Define if you have the LAME MP3 library])
       ], [have_LAME="no"], -lm)
   fi
 fi
+AM_CONDITIONAL(USE_LAME, test "$have_LAME" = "yes")
 
 if test "$with_lame" != "no" -a "$have_LAME" != "yes"
 then
@@ -322,13 +322,13 @@ then
   if test "$have_vorbis" != "no"
   then
     AC_CHECK_LIB(vorbisfile, ov_open, [
-      ICES_OBJECTS="$ICES_OBJECTS in_vorbis.o"
       LIBS="$LIBS -lvorbisfile -lvorbis -logg"
       AC_DEFINE(HAVE_LIBVORBISFILE, 1, [Define if you have libvorbisfile])
       have_vorbis="yes"
     ],[have_vorbis="no"],-lvorbis -logg)
   fi
 fi
+AM_CONDITIONAL(USE_VORBIS, test "$have_vorbis" = "yes")
 
 if test "$with_vorbis" != "no" -a "$have_vorbis" != "yes"
 then
@@ -343,8 +343,6 @@ fi
 dnl -- and finish up --
 
 LIBS="$LIBS $LIBM $LIBDL"
-AC_SUBST(ICES_OBJECTS)
-AC_SUBST(PLAYLIST_OBJECTS)
 
 AC_OUTPUT
 
