--- a/icecast/trunk/ices0/trunk/src/Makefile.am
+++ b/icecast/trunk/ices0/trunk/src/Makefile.am
@@ -1,7 +1,5 @@
 ## Process this with automake to create Makefile.in
 
-AUTOMAKE_OPTIONS = foreign
-
 SUBDIRS = playlist
 
 bin_PROGRAMS = ices
@@ -13,18 +11,9 @@ noinst_HEADERS = icestypes.h definitions.h setup.h log.h stream.h util.h \
 ices_SOURCES = ices.c log.c setup.c stream.c util.c mp3.c cue.c metadata.c \
 	id3.c signals.c
 
-if USE_XML
-ices_SOURCES += ices_config.c
-endif
+EXTRA_ices_SOURCES = ices_config.c reencode.c in_vorbis.c
 
-if USE_LAME
-ices_SOURCES += reencode.c
-endif
-
-if USE_VORBIS
-ices_SOURCES += in_vorbis.c
-endif
-
-ices_LDADD = playlist/libplaylist.a
+ices_LDADD = $(ICES_OBJECTS) playlist/libplaylist.a
+ices_DEPENDENCIES = $(ices_LDADD)
 
 AM_CPPFLAGS = -DICES_ETCDIR=\"$(sysconfdir)\" -DICES_MODULEDIR=\"$(moddir)\"
