--- a/icecast/trunk/ices0/trunk/src/playlist/Makefile.am
+++ b/icecast/trunk/ices0/trunk/src/playlist/Makefile.am
@@ -1,20 +1,12 @@
 ## Process this with automake to create Makefile.in
 
-AUTOMAKE_OPTIONS = foreign
-
 INCLUDES = -DICES_MODULEDIR=\"$(moddir)\" -I$(top_srcdir)/src
 
 noinst_LIBRARIES = libplaylist.a
 noinst_HEADERS = playlist.h pm_builtin.h rand.h
 
 libplaylist_a_SOURCES = playlist.c pm_builtin.c rand.c
+EXTRA_libplaylist_a_SOURCES = pm_python.c pm_perl.c
 
-if USE_PYTHON
-libplaylist_a_SOURCES += pm_python.c
-endif
-
-if USE_PERL
-libplaylist_a_SOURCES += pm_perl.c
-endif
-
-EXTRA_DIST = pm_perl.c pm_python.c
+libplaylist_a_LIBADD = $(PLAYLIST_OBJECTS)
+libplaylist_a_DEPENDENCIES = $(libplaylist_a_LIBADD)
