--- a/icecast/trunk/ices0/trunk/Makefile.am
+++ b/icecast/trunk/ices0/trunk/Makefile.am
@@ -2,7 +2,7 @@
 
 SUBDIRS = src conf doc
 
-EXTRA_DIST = README FEATURES BUGS AUTHORS TODO INSTALL COPYING CHANGES FAQ TESTED README.playlist FILES
+EXTRA_DIST = README BUGS AUTHORS TODO INSTALL COPYING NEWS FAQ README.playlist
 
 libtool: $(LIBTOOL_DEPS)
 	$(SHELL) ./config.status --recheck
