--- a/icecast/trunk/ices0/trunk/Makefile.am
+++ b/icecast/trunk/ices0/trunk/Makefile.am
@@ -1,5 +1,7 @@
 ## Process this with automake to create Makefile.in
 
+ACLOCAL_AMFLAGS = -I m4
+
 SUBDIRS = src conf doc
 
 EXTRA_DIST = README BUGS AUTHORS TODO INSTALL COPYING NEWS FAQ README.playlist
