Minor doc updates (libshout no longer bundled, FAQ hopelessly out of date)

--- a/icecast/trunk/ices0/trunk/Makefile.am
+++ b/icecast/trunk/ices0/trunk/Makefile.am
@@ -4,7 +4,7 @@ ACLOCAL_AMFLAGS = -I m4
 
 SUBDIRS = src conf doc
 
-EXTRA_DIST = README BUGS AUTHORS TODO INSTALL COPYING NEWS FAQ README.playlist
+EXTRA_DIST = README BUGS AUTHORS TODO INSTALL COPYING NEWS README.playlist
 
 libtool: $(LIBTOOL_DEPS)
 	$(SHELL) ./config.status --recheck
