--- a/icecast/branches/net-icecast-kh/Makefile.am
+++ b/icecast/branches/net-icecast-kh/Makefile.am
@@ -9,6 +9,7 @@ noinst_HEADERS = resolver.h sock.h
 
 libicenet_la_SOURCES = sock.c resolver.c
 libicenet_la_CFLAGS = @XIPH_CFLAGS@
+AM_CPPFLAGS = @XIPH_CPPFLAGS@
 
 INCLUDES = -I$(srcdir)/..
 
