Finish import of KH branch.

--- a/icecast/branches/kh/libshout/examples/Makefile.am
+++ b/icecast/branches/kh/libshout/examples/Makefile.am
@@ -2,10 +2,12 @@
 
 AUTOMAKE_OPTIONS = foreign
 
-noinst_PROGRAMS = example
+noinst_PROGRAMS = example example2
 
 example_SOURCES = example.c
-example_LDADD = ../src/libshout.la $(VORBIS_LIBS)
+example2_SOURCES = example2.c
+LDADD = ../src/libshout.la $(XIPH_LIBS)
 AM_CFLAGS = @XIPH_CFLAGS@
+AM_CPPFLAGS = @XIPH_CFLAGS@
 
 INCLUDES = -I$(top_builddir)/include
