--- a/icecast/branches/kh/libshout/Makefile.am
+++ b/icecast/branches/kh/libshout/Makefile.am
@@ -1,21 +1,11 @@
 ## Process this file with automake to produce Makefile.in
 
-AUTOMAKE_OPTIONS = 1.6 foreign
+AUTOMAKE_OPTIONS = 1.6 foreign dist-bzip2
 ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS = include src examples debian doc win32
+SUBDIRS = include src examples
 
-EXTRA_DIST = INSTALL m4/shout.m4 m4/ac_config_libconfig_in.m4 m4/acx_pthread.m4 \
-	m4/ogg.m4 m4/vorbis.m4 m4/xiph_compiler.m4 m4/xiph_net.m4 \
-	m4/xiph_types.m4
-
-DISTCLEANFILES = shout-config.in
-
-docdir = $(datadir)/doc/$(PACKAGE)
-doc_DATA = COPYING README examples/example.c
-
-m4datadir = $(datadir)/aclocal
-m4data_DATA = m4/shout.m4
+EXTRA_DIST = README COPYING NEWS m4
 
 if HAVE_PKGCONFIG
   pkgconfigdir = $(libdir)/pkgconfig
@@ -23,6 +13,10 @@ if HAVE_PKGCONFIG
 else
   bin_SCRIPTS = shout-config
 endif
+DISTCLEANFILES = shout-config.in
+
+## SCCS stuff (for BitKeeper)
+GET = true
 
 debug:
 	$(MAKE) all CFLAGS="@DEBUG@"
