--- a/icecast/trunk/libshout/src/Makefile.am
+++ b/icecast/trunk/libshout/src/Makefile.am
@@ -12,7 +12,7 @@ lib_LTLIBRARIES = libshout.la
 libshout_la_LDFLAGS = -version-info 3:0:0
 
 noinst_HEADERS = shout_private.h util.h
-libshout_la_SOURCES = shout.c util.c vorbis.c mp3.c
+libshout_la_SOURCES = shout.c util.c ogg.c mp3.c
 AM_CFLAGS = @XIPH_CFLAGS@
 
 libshout_la_LIBADD = net/libicenet.la timing/libicetiming.la avl/libiceavl.la\
