Crossfade plugin. Disabled for now - it seems to have a glitchy ring buffer. Also, I have to tie it into the config file.

--- a/icecast/trunk/ices0/src/Makefile.am
+++ b/icecast/trunk/ices0/src/Makefile.am
@@ -6,10 +6,10 @@ bin_PROGRAMS = ices
 
 noinst_HEADERS = icestypes.h definitions.h setup.h log.h stream.h util.h \
 	cue.h metadata.h in_vorbis.h mp3.h id3.h signals.h reencode.h \
-	ices_config.h
+	ices_config.h plugin.h
 
 ices_SOURCES = ices.c log.c setup.c stream.c util.c mp3.c cue.c metadata.c \
-	id3.c signals.c
+	id3.c signals.c crossfade.c
 
 EXTRA_ices_SOURCES = ices_config.c reencode.c in_vorbis.c
 
