--- a/icecast/trunk/ices0/doc/ices.1.in
+++ b/icecast/trunk/ices0/doc/ices.1.in
@@ -1,4 +1,4 @@
-.TH "ices" "1" "July 2003" "ices @VERSION@" "Icecast media streaming system"
+.TH "ices" "1" "July 2004" "ices @VERSION@" "Icecast media streaming system"
 .SH NAME
 ices \- stream MP3 audio to an icecast server
 
@@ -18,6 +18,8 @@ ices \- stream MP3 audio to an icecast server
 .BR python \|| perl
 .RB [\| \-M
 .IR module \|]\|]
+.RB [\| \-C
+.IR crossfadesecs \|]
 .\" Server options
 .RB [\|[\| \-m
 .IR mount \|]
@@ -67,6 +69,9 @@ On-the-fly reencoding of your source audio to a different bitrate,
 number of channels and/or sample rate. ices can also decode Ogg Vorbis
 files and reencode them on the fly as MP3, for the benefit of older
 listening software.
+.IP \(bu
+Crossfading between tracks. This is a new feature, and requires
+reencoding support.
 .IP \(bu
 Multiple streams from the same playlist. In conjunction with
 reencoding this gives you a very easy way to provide the same music
@@ -130,6 +135,11 @@ playlist modules, load the module named
 instead of the default, 
 .BR ices .
 Otherwise this option does nothing.
+.TP
+.BI \-C \ crossfadesecs
+Crossfade between tracks. The length of the fade is
+.I crossfade
+seconds. This option requires reencoding support.
 
 .SS "Stream options"
 .TP
