--- a/icecast/trunk/ices0/src/Makefile.am
+++ b/icecast/trunk/ices0/src/Makefile.am
@@ -6,7 +6,7 @@ bin_PROGRAMS = ices
 
 noinst_HEADERS = icestypes.h definitions.h setup.h log.h stream.h util.h \
 	cue.h metadata.h in_vorbis.h mp3.h id3.h signals.h reencode.h \
-	ices_config.h plugin.h
+	ices_config.h
 
 ices_SOURCES = ices.c log.c setup.c stream.c util.c mp3.c cue.c metadata.c \
 	id3.c signals.c crossfade.c
