--- a/icecast/trunk/ices0/doc/ices.1.in
+++ b/icecast/trunk/ices0/doc/ices.1.in
@@ -68,8 +68,8 @@ media-delivery system as you can think up.
 On-the-fly reencoding of your source audio to a different bitrate,
 number of channels and/or sample rate. ices can also decode Ogg Vorbis
 files and reencode them on the fly as MP3, for the benefit of older
-listening software. This just in: it can transcode MP4 (AAC) files now
-too.
+listening software. This just in: it can transcode FLAC and MP4 (AAC)
+files now too. Keep your sources in whatever format you prefer.
 .IP \(bu
 Crossfading between tracks. This is a new feature, and requires
 reencoding support.
