cleanup some Makefile.am stuff

--- a/icecast/branches/kh/ices/conf/Makefile.am
+++ b/icecast/branches/kh/ices/conf/Makefile.am
@@ -2,5 +2,4 @@
 
 AUTOMAKE_OPTIONS = foreign
 
-EXTRA_DIST = ices-live.xml ices-playlist.xml ices-pcm.xml ices-pcm2.xml ices-switch.xml ices-fixit.xml
-
+EXTRA_DIST = ices-fixit.xml ices-jack.xml ices-live.xml ices-pcm2.xml ices-pcm.xml ices-playlist.xml ices-switch.xml
