--- a/icecast/branches/kh/ices/Makefile.am
+++ b/icecast/branches/kh/ices/Makefile.am
@@ -3,9 +3,9 @@
 AUTOMAKE_OPTIONS = 1.6 foreign dist-bzip2
 ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS = src conf
+SUBDIRS = conf debian doc src
 
-EXTRA_DIST = README AUTHORS COPYING TODO NEWS m4
+EXTRA_DIST = README AUTHORS COPYING TODO NEWS m4 contrib
 
 # SCCS Definitions (for BitKeeper)
 GET = true
@@ -15,3 +15,10 @@ debug:
 
 profile:
 	$(MAKE) all CFLAGS="@PROFILE@"
+
+dist-hook:
+	rm -rf `find $(distdir)/contrib -name .svn`
+	rm -rf `find $(distdir)/m4 -name .svn`
+	rm -rf `find $(distdir)/src/net -name .svn`
+	rm -rf `find $(distdir)/src/thread -name .svn`
+	rm -rf `find $(distdir)/src/timing -name .svn`
