--- a/icecast/branches/kh/ices/configure.in
+++ b/icecast/branches/kh/ices/configure.in
@@ -184,4 +184,4 @@ AC_SUBST(PTHREAD_CFLAGS)
 AC_SUBST(LIBS)
 AC_SUBST(LDFLAGS)
 
-AC_OUTPUT(Makefile conf/Makefile src/Makefile src/log/Makefile)
+AC_OUTPUT(Makefile conf/Makefile debian/Makefile doc/Makefile src/Makefile src/log/Makefile)
